adding more things and updgrading code

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Other Technologies</h2>
                             </div>
 
-                            <!-- Academic Experience Accordion Database Content -->
+                            <!-- Academic Experience Accordion Other Technologies Content -->
                             <div class="row justify-content-center">
                                 <!-- Portfolio Items-->
                                 <div class="col-md-2 col-lg-2 mb-2">
@@ -498,60 +498,32 @@
         </div>
     </section>
 
-
-    <section class="page-section about text-white " id="work-experience ">
-        <div class="container ">
-            <!-- About Section Heading-->
-            <div class="text-center ">
-                <h2 class="page-section-heading d-inline-block text-white ">WORK EXPERIENCE</h2>
-            </div>
-            <!-- Icon Divider-->
-            <div class="divider-custom divider-light ">
-                <div class="divider-custom-line "></div>
-                <div class="divider-custom-icon "><i class="fas fa-star "></i></div>
-                <div class="divider-custom-line "></div>
-            </div>
-            <!-- About Section Content-->
-            <div class="row ">
-                <div class="col-lg-auto ml-auto text-justify ">
-                    <p class="lead ">
-                        Hi, I am a student of software engineer focused on Web Development and backend (Java). I like all topics about technology and future. I have participated at hotbed of programming marathons and events that university offer. <br><br>                        Furthermore, I participate and actively contribute to each stage of the construction of a software, offering a good user experience. Every day I improve in my programming skills and I learn new technologies that can be implemented
-                        to create high impact projects, I hope to become in a big product manager or an architect of software. <br><br> I work with great goals that can revolutionize the world oriented to get excellent results, accompanied by a hard work
-                        in t teams, interpersonal relationships and extensive experience to offer a service.
-                    </p>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-
+    <!-- Work Experience Section -->
     <section class="page-section about text-white " id="work-experience">
         <div class="container">
-            <!-- About Section Heading-->
+
+            <!-- Work Experience Section Heading-->
             <div class="text-center">
                 <h2 class="page-section-heading d-inline-block text-white">WORK EXPERIENCE</h2>
             </div>
+
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-            <!-- About Section Content-->
+
+            <!-- Work Experience Section Section Content-->
             <div class="row">
                 <div class="col-lg-auto ml-auto text-justify">
-                    <p class="lead">
-                        Hi, I am a student of software engineer focused on Web Development and backend (Java). I like all topics about technology and future. I have participated at hotbed of programming marathons and events that university offer. <br><br>                        Furthermore, I participate and actively contribute to each stage of the construction of a software, offering a good user experience. Every day I improve in my programming skills and I learn new technologies that can be implemented
-                        to create high impact projects, I hope to become in a big product manager or an architect of software. <br><br> I work with great goals that can revolutionize the world oriented to get excellent results, accompanied by a hard work
-                        in t teams, interpersonal relationships and extensive experience to offer a service.
+                    <p class="lead text-justify">
+                        At the moment I have not worked as a developer
                     </p>
                 </div>
-
             </div>
         </div>
     </section>
-
 
     <!-- Portfolio Modal-->
     <div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal0Label" aria-hidden="true">
@@ -791,7 +763,7 @@
     </section>
 
 
-    <section class="page-section text-white " id="contact ">
+    <section class="page-section text-white " id="contact">
         <div class="container ">
             <!-- Contact Section Heading-->
             <div class="text-center ">
@@ -821,6 +793,8 @@
             </div>
         </div>
     </section>
+
+
     <footer class="footer text-center ">
         <div class="container ">
             <div class="row ">
@@ -831,7 +805,7 @@
                 </div>
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0 ">
-                    <h4 class="mb-4 ">Social Networks</h4>
+                    <h4 class="mb-4 ">SOCIAL NETWORKS</h4>
                     <a class="btn btn-outline-light btn-social mx-1 " href="https://www.youtube.com/channel/UChvZwgRAnJZ6MzdgPUTtWSg/videos "><i class="fab fa-youtube "></i></a>
                     <a class="btn btn-outline-light btn-social mx-1 " href="https://stackoverflow.com/users/13682076/juan-felipe-jimenez-pacheco "><i class="fab fa-stack-overflow " aria-hidden="true "></i></a>
                     <a class="btn btn-outline-light btn-social mx-1 " href="https://github.com/JuanfelipeX "><i class="fab fa-fw fa-github "></i></a>
@@ -840,28 +814,36 @@
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4 ">
-                    <h4 class="mb-4 ">ABOUT FREELANCER</h4>
-                    <p class="pre-wrap lead mb-0 ">Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap</p>
+                    <h4 class="mb-4 ">ABOUT THIS WEBSITE</h4>
+                    <p class="pre-wrap lead mb-0 ">This website was designed to demonstrate the talent of Juan Felipe Jimenez P.</p>
                 </div>
             </div>
         </div>
     </footer>
+
+
     <!-- Copyright Section-->
     <section class="copyright py-4 text-center text-white ">
-        <div class="container "><small class="pre-wrap ">Copyright © Your Website 2020</small></div>
+        <div class="container "><small class="pre-wrap ">Copyright © My Website 2022</small></div>
     </section>
+
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed "><a class="js-scroll-trigger d-block text-center text-white rounded " href="#page-top "><i class="fa fa-chevron-up "></i></a></div>
+
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js "></script>
+
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js "></script>
+
     <!-- Contact form JS-->
     <script src="assets/mail/jqBootstrapValidation.js "></script>
     <script src="assets/mail/contact_me.js "></script>
+
     <!-- Core theme JS-->
     <script src="js/scripts.js "></script>
+
 </body>
 
 </html>
