falta mejorar about, experience y agregar portafolio

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image -->
-            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="This is the photography of Juan Felipe Jimenez">
+            <img class="masthead-avatar mb-5" src="assets/img/fotoPerfil.jpg" alt="This is the photography of Juan Felipe Jimenez">
             <!-- Masthead Heading -->
             <h1 class="masthead-heading mb-0">JUAN FELIPE JIMENEZ PACHECO</h1>
             <!-- Icon Divider -->
@@ -516,33 +516,31 @@
         </div>
     </section>
 
-    <!-- Work Experience Section -->
+    <!-- WORK EXPERIENCE SECTION -->
     <section class="page-section about text-white " id="work-experience">
         <div class="container">
-
             <!-- Work Experience Section Heading-->
             <div class="text-center">
                 <h2 class="page-section-heading d-inline-block text-white">WORK EXPERIENCE</h2>
             </div>
-
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-
             <!-- Work Experience Section Section Content-->
             <div class="col-lg-auto ml-auto text-justify">
                 <p class="lead text-section">
-                    At the moment I have not worked as a developer
+                    <i class='bx bxs-star tecnologies-icons5'>  At the moment I have not worked as a developer </i>
                 </p>
             </div>
         </div>
     </section>
 
-    <!-- Portfolio Modal-->
+    <!-- PORTAFOLIO MODAL-->
     <div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal0Label" aria-hidden="true">
+        <!-- Portafolio Modal Item 1 -->
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -572,6 +570,7 @@
     </div>
 
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal1Label" aria-hidden="true">
+        <!-- Portafolio Modal Item 2 -->
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -601,6 +600,7 @@
     </div>
 
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal2Label" aria-hidden="true">
+        <!-- Portafolio Modal Item 3 -->
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -630,6 +630,7 @@
     </div>
 
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal3Label" aria-hidden="true">
+        <!-- Portafolio Modal Item 4 -->
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -659,6 +660,7 @@
     </div>
 
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal4Label" aria-hidden="true">
+        <!-- Portafolio Modal Item 5 -->
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -688,6 +690,7 @@
     </div>
 
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal5Label" aria-hidden="true">
+        <!-- Portafolio Modal Item 6 -->
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -716,7 +719,7 @@
         </div>
     </div>
 
-
+    <!-- PORTAFOLIO SECTION -->
     <section class="page-section bg-primary text-white mb-0" id="portfolio">
         <div class="container">
             <!-- Portfolio Section Heading-->
@@ -778,7 +781,7 @@
         </div>
     </section>
 
-
+    <!-- CONTACT SECTION -->
     <section class="page-section text-white " id="contact">
         <div class="container ">
             <!-- Contact Section Heading-->
@@ -810,7 +813,7 @@
         </div>
     </section>
 
-
+    <!-- FOOTER SECTION -->
     <footer class="footer text-center ">
         <div class="container ">
             <div class="row ">
@@ -837,8 +840,7 @@
         </div>
     </footer>
 
-
-    <!-- Copyright Section-->
+    <!-- COPYRIGHT SECTION-->
     <section class="copyright py-4 text-center text-white ">
         <div class="container "><small class="pre-wrap ">Copyright © My Website 2022</small></div>
     </section>
