--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
             <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 👨‍💻 Software Developer 👨‍💻</p>
         </div>
         <!-- Masthead Subheading -->
-        <button type="button" class="btn btn-secondary btn-cv" onclick="window.open('../CV.pdf')">Download CV</button>
+
+        <button type="button" class="btn btn-secondary btn-cv">
+            <a href="../CV - Juan Felipe Jiménez _compressed.pdf" download="CV-JuanFelipeJimenezP">DOWNLOAD CV</a>
+        </button>
 
     </header>
 
