--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- Masthead Subheading -->
 
         <button type="button" class="btn btn-secondary btn-cv">
-            <a href="../CV - Juan Felipe Jiménez _compressed.pdf" download="CV-JuanFelipeJimenezP">DOWNLOAD CV</a>
+            <a href="CV.pdf" download="CV-JuanFelipeJimenezP">DOWNLOAD CV</a>
         </button>
 
     </header>
