--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary mb-0">Tasty Cake</h2>
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Weather App</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -706,12 +706,20 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
-                                    src="assets/img/portfolio/cake.png" alt="Tasty Cake" />
+                                    src="assets/img/portfolio/weatherapp.png" alt="Weather App" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                                    itaque. Nam.</p>
+                                <p class="mb-3">WeatherCheck is a comprehensive and user-friendly weather application
+                                    that provides up-to-date weather information right at your fingertips. With its
+                                    intuitive interface and accurate forecasts, it helps you plan your day and stay
+                                    prepared for any weather condition.
+                                </p>
+
+                                <p class="mb-3">Technologies such as: HTML, CSS, Bootstrap, Angular,
+                                    Typescript, Firesebase
+                                </p>
+
+                                <a href="https://weatherapp-angular-c5caf.web.app/">Link to the App <br> <br> </a>
+
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
                             </div>
@@ -903,7 +911,11 @@
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/cake.png" alt="Tasty Cake" />
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <img class="img-fluid" src="assets/img/portfolio/weather.png" alt="Weather App"
+                                style="max-width: 75%; height: auto;">
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-5">
