haciendo cambios en la cv

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Masthead Subheading -->
 
         <button type="button" class="btn btn-secondary btn-cv">
-            <a href="CV.pdf" download="CV-JuanFelipeJimenezP">DOWNLOAD CV</a>
+            <a href="CV_Ingles_Juan Felipe Jiménez.pdf" download="CV-JuanFelipeJimenezP">DOWNLOAD CV</a>
         </button>
 
     </header>
@@ -95,12 +95,40 @@
             <!-- About Section Content -->
             <div class="col-lg-auto ml-auto text-justify">
                 <p class="lead text-section">
-                    I am a dedicated Software Engineering student with a strong focus on Web Development (Fullstack). My
-                    passion for technology and commitment to delivering exceptional user experiences drive me to
-                    actively contribute to all stages of software construction. Continuously improving my programming
-                    skills and staying updated on emerging technologies, I aspire to become a prominent product manager
-                    or software architect. With ambitious goals and a strong work ethic, I strive to revolutionize the
-                    world while fostering collaborative teamwork and providing exceptional service.
+                    My name is Juan Felipe Jiménez, I am a final year student of Systems Engineering with a focus on
+                    Fullstack Web Development in Bogotá, Colombia. I am passionate about technology and the future, it
+                    constantly motivates me to explore new possibilities. In addition, I am a lover of music and sports,
+                    especially athletics. I am always hungry for knowledge and enjoy learning continuously.
+                    <br><br>
+                    Currently, I have a solid level of English between B1 and B2, and I am also learning French in a
+                    self-taught way.
+                    <br><br>
+                    My professional vision is focused on leading Software Development teams and specializing in Software
+                    Architecture at the Pontificia Universidad Javeriana.
+                    <br><br>
+                    Work experience:
+                    I started my career as a Fullstack Developer at IngenioApps SAS, a Software Consultant, for a year.
+                    In the Backend part, I was in charge of implementing use cases using PHP and Laravel. Regarding the
+                    Frontend, I led the integration of REST APIs in Angular, HTML, Tailwind and Alpine.js. I also
+                    managed migrations and connections to MySQL databases.
+                    <br><br>
+                    Later, I had the honor of working with the National University of Colombia, where I contributed for
+                    4 months. My responsibilities included the recovery of fallen sites through Backups and web
+                    development. Here I handled technologies such as Linux, PHP, MariaDB and the CMS Typo3.
+                    <br><br>
+                    Academic experience:
+                    My academic training takes place at the Konrad Lorenz University Foundation in Bogotá, Colombia,
+                    where I am currently in the ninth semester of Systems Engineering. I have participated in
+                    programming competitions such as CCPL, RPCS, VJudge, UVA and CodeForces, and I have competed in
+                    universities such as the Gran Colombiano Polytechnic and the Universidad del Bosque. I have also
+                    contributed to research groups, specifically on data analysis using Python.
+                    <br><br>
+                    I have complemented my learning with virtual course certifications on platforms such as Platzi,
+                    Udemy and IBM.
+                    <br><br>
+                    I am excited to continue my journey in the world of software development and technology.
+                    Hit me up if you share my passion for technology and are interested in collaborating or
+                    brainstorming!
                 </p>
             </div>
         </div>
@@ -129,9 +157,9 @@
                             src="https://www.idc-latinamerica.com/sites/default/files/2021-07/Konrad_Lorenz%20Logo.png"
                             alt="This is the logo of Konrad Lorenz university">
                         <div class="card-body ">
-                            <h5 class="card-title">College (Software Engineer) - Fundacion Universitaria Konrad Lorenz
+                            <h5 class="card-title">College (System Engineer) - Konrad Lorenz University
                             </h5>
-                            <p class="card-text">January 2019 - December 2023.</p>
+                            <p class="card-text">January 2020 - December 2023.</p>
                         </div>
                     </div>
                 </div>
@@ -625,10 +653,12 @@
             <div class="col-lg-auto ml-auto text-justify">
                 <div class="lead text-section">
                     <i class='bx bxs-star tecnologies-icons5 font-weight-bold'> Fullstack Developer at IngenioApps
-                        Developers: June 2022 - March 2023 (10 Months)
+                        Developers: March 2022 - March 2023 (1 Year)
                     </i>
-                    <p>In charge of carrying out development in the Backend part with Laravel, APIS REST and
-                        databases, and in the Fronted part, carrying out web layout with Angular
+                    <p>In charge of developing software for a construction budget simulator: In the Backend part we used
+                        PHP and Laravel. In the Fronted we used Angular, HTML. Tailwind, Typescript, Alpine.js and we
+                        integrated the REST APIS created in the Backend and finally I was in charge of managing the
+                        Databases with MySql and making the proper connection and data migration
                     </p>
                 </div>
 
@@ -636,7 +666,9 @@
                     <i class='bx bxs-star tecnologies-icons5 font-weight-bold'> Web Developer at the National University
                         of Colombia (UNAL): March 2023 - June 2023 (4 Months)
                     </i>
-                    <p>In charge of developing web software with CMS Typo3 and managing Databases (MariaDB)</p>
+                    <p>In charge of developing websites in PHP with the CMS Typo3, managing and making backups of the
+                        databases, and giving support to the sites that are down at the National University of Colombia
+                    </p>
                 </div>
             </div>
         </div>
