--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading -->
-            <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 👨‍💻 Software Developer 👨‍💻</p>
+            <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 👨‍💻 Fullstack Web Developer 👨‍💻</p>
         </div>
         <!-- Masthead Subheading -->
 
@@ -95,40 +95,21 @@
             <!-- About Section Content -->
             <div class="col-lg-auto ml-auto text-justify">
                 <p class="lead text-section">
-                    My name is Juan Felipe Jiménez, I am a final year student of Systems Engineering with a focus on
-                    Fullstack Web Development in Bogotá, Colombia. I am passionate about technology and the future, it
-                    constantly motivates me to explore new possibilities. In addition, I am a lover of music and sports,
-                    especially athletics. I am always hungry for knowledge and enjoy learning continuously.
-                    <br><br>
-                    Currently, I have a solid level of English between B1 and B2, and I am also learning French in a
-                    self-taught way.
-                    <br><br>
-                    My professional vision is focused on leading Software Development teams and specializing in Software
-                    Architecture at the Pontificia Universidad Javeriana.
+                    My name is Juan Felipe Jiménez, I am a final year student of Systems Engineering with a focus on Fullstack Web Development. I am passionate about technology and the future, I am a lover of music and sports and I enjoy learning continuously.
+                    My professional vision is focused on leading Software Development teams and specializing in Software Architecture at the Pontificia Universidad Javeriana.
                     <br><br>
                     Work experience:
-                    I started my career as a Fullstack Developer at IngenioApps SAS, a Software Consultant, for a year.
-                    In the Backend part, I was in charge of implementing use cases using PHP and Laravel. Regarding the
-                    Frontend, I led the integration of REST APIs in Angular, HTML, Tailwind and Alpine.js. I also
-                    managed migrations and connections to MySQL databases.
+                    I started as a Fullstack Developer. In the Backend part, I was in charge of implementing use cases using PHP and Laravel. Regarding the Frontend, I led the integration of REST APIs in Angular, HTML, Tailwind and Alpine.js. I also managed migrations and connections to MySQL databases.
                     <br><br>
-                    Later, I had the honor of working with the National University of Colombia, where I contributed for
-                    4 months. My responsibilities included the recovery of fallen sites through Backups and web
-                    development. Here I handled technologies such as Linux, PHP, MariaDB and the CMS Typo3.
+                    Later, I had the honor of working with the National University of Colombia. My responsibilities included the recovery of fallen sites through Backups and in web development, I managed technologies such as Linux, PHP, MariaDB and the CMS Typo3.
                     <br><br>
                     Academic experience:
-                    My academic training takes place at the Konrad Lorenz University Foundation in Bogotá, Colombia,
-                    where I am currently in the ninth semester of Systems Engineering. I have participated in
-                    programming competitions such as CCPL, RPCS, VJudge, UVA and CodeForces, and I have competed in
-                    universities such as the Gran Colombiano Polytechnic and the Universidad del Bosque. I have also
-                    contributed to research groups, specifically on data analysis using Python.
+                    My academic training takes place at the Konrad Lorenz University Foundation, where I am currently in the ninth semester of Systems Engineering. There I participated in Java programming competitions and contributed to research groups on data analysis using Python.
                     <br><br>
-                    I have complemented my learning with virtual course certifications on platforms such as Platzi,
-                    Udemy and IBM.
+                    I have complemented my learning with virtual course certifications on platforms such as Platzi, Udemy and IBM. Currently, I have a B1 level of English, and Basic French.
                     <br><br>
                     I am excited to continue my journey in the world of software development and technology.
-                    Hit me up if you share my passion for technology and are interested in collaborating or
-                    brainstorming!
+                    Hit me up if you share my passion for technology and are interested in collaborating or brainstorming!
                 </p>
             </div>
         </div>
@@ -625,7 +606,7 @@
                         <i class='bx bxs-star tecnologies-icons2'> Spanish - Native Speaker</i>
                     </div>
                     <div class="col-sm">
-                        <i class='bx bxs-star tecnologies-icons2'> English - Advanced Level</i>
+                        <i class='bx bxs-star tecnologies-icons2'> English - Conversational</i>
                     </div>
                     <div class="col-sm">
                         <i class='bx bxs-star tecnologies-icons2'> French - Basic Level</i>
