--- a/index.html
+++ b/index.html
@@ -95,21 +95,32 @@
             <!-- About Section Content -->
             <div class="col-lg-auto ml-auto text-justify">
                 <p class="lead text-section">
-                    My name is Juan Felipe Jiménez, I am a final year student of Systems Engineering with a focus on Fullstack Web Development. I am passionate about technology and the future, I am a lover of music and sports and I enjoy learning continuously.
-                    My professional vision is focused on leading Software Development teams and specializing in Software Architecture at the Pontificia Universidad Javeriana.
+                    My name is Juan Felipe Jiménez, I am a final year student of Systems Engineering with a focus on
+                    Fullstack Web Development. I am passionate about technology and the future, I am a lover of music
+                    and sports and I enjoy learning continuously.
+                    My professional vision is focused on leading Software Development teams and specializing in Software
+                    Architecture at the Pontificia Universidad Javeriana.
                     <br><br>
                     Work experience:
-                    I started as a Fullstack Developer. In the Backend part, I was in charge of implementing use cases using PHP and Laravel. Regarding the Frontend, I led the integration of REST APIs in Angular, HTML, Tailwind and Alpine.js. I also managed migrations and connections to MySQL databases.
+                    I started as a Fullstack Developer. In the Backend part, I was in charge of implementing use cases
+                    using PHP and Laravel. Regarding the Frontend, I led the integration of REST APIs in Angular, HTML,
+                    Tailwind and Alpine.js. I also managed migrations and connections to MySQL databases.
                     <br><br>
-                    Later, I had the honor of working with the National University of Colombia. My responsibilities included the recovery of fallen sites through Backups and in web development, I managed technologies such as Linux, PHP, MariaDB and the CMS Typo3.
+                    Later, I had the honor of working with the National University of Colombia. My responsibilities
+                    included the recovery of fallen sites through Backups and in web development, I managed technologies
+                    such as Linux, PHP, MariaDB and the CMS Typo3.
                     <br><br>
                     Academic experience:
-                    My academic training takes place at the Konrad Lorenz University Foundation, where I am currently in the ninth semester of Systems Engineering. There I participated in Java programming competitions and contributed to research groups on data analysis using Python.
+                    My academic training takes place at the Konrad Lorenz University Foundation, where I am currently in
+                    the ninth semester of Systems Engineering. There I participated in Java programming competitions and
+                    contributed to research groups on data analysis using Python.
                     <br><br>
-                    I have complemented my learning with virtual course certifications on platforms such as Platzi, Udemy and IBM. Currently, I have a B1 level of English, and Basic French.
+                    I have complemented my learning with virtual course certifications on platforms such as Platzi,
+                    Udemy and IBM. Currently, I have a B1 level of English, and Basic French.
                     <br><br>
                     I am excited to continue my journey in the world of software development and technology.
-                    Hit me up if you share my passion for technology and are interested in collaborating or brainstorming!
+                    Hit me up if you share my passion for technology and are interested in collaborating or
+                    brainstorming!
                 </p>
             </div>
         </div>
@@ -633,6 +644,19 @@
             <!-- Work Experience Section Section Content-->
             <div class="col-lg-auto ml-auto text-justify">
                 <div class="lead text-section">
+
+                    <div class="lead text-section">
+                        <i class='bx bxs-star tecnologies-icons5 font-weight-bold'> Web Developer at the National
+                            University
+                            of Colombia (UNAL): March 2023 - June 2023 (4 Months)
+                        </i>
+                        <p>In charge of developing websites in PHP with the CMS Typo3, managing and making backups of
+                            the
+                            databases, and giving support to the sites that are down at the National University of
+                            Colombia
+                        </p>
+                    </div>
+
                     <i class='bx bxs-star tecnologies-icons5 font-weight-bold'> Fullstack Developer at IngenioApps
                         Developers: March 2022 - March 2023 (1 Year)
                     </i>
@@ -643,14 +667,7 @@
                     </p>
                 </div>
 
-                <div class="lead text-section">
-                    <i class='bx bxs-star tecnologies-icons5 font-weight-bold'> Web Developer at the National University
-                        of Colombia (UNAL): March 2023 - June 2023 (4 Months)
-                    </i>
-                    <p>In charge of developing websites in PHP with the CMS Typo3, managing and making backups of the
-                        databases, and giving support to the sites that are down at the National University of Colombia
-                    </p>
-                </div>
+
             </div>
         </div>
     </section>
